--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
   "name": "fucking-5D",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "./src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "fuck": "node index.js"
+    "fuck": "node index.js",
+    "dev": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^12.0.0",
     "axios": "^1.3.4",
     "jimp": "^0.22.7",
-    "jsqr": "^1.4.0"
+    "jsqr": "^1.4.0",
+    "koa": "^2.14.1",
+    "koa-bodyparser": "^4.4.0",
+    "koa-static": "^5.0.0",
+    "koa2-connect-history-api-fallback": "^0.1.3"
+  },
+  "devDependencies": {
+    "@types/koa": "^2.13.5",
+    "@types/koa-static": "^4.0.2",
+    "@types/koa__router": "^12.0.0",
+    "@types/nodemon": "^1.19.2",
+    "nodemon": "^2.0.22"
   }
 }
