--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fucking-5D",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "./src/app.js",
   "scripts": {
@@ -19,7 +19,8 @@
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.4.0",
     "koa-static": "^5.0.0",
-    "koa2-connect-history-api-fallback": "^0.1.3"
+    "koa2-connect-history-api-fallback": "^0.1.3",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@types/koa": "^2.13.5",
